# swagger/swagger.yml
@@ -149,6 +149,23 @@ paths:
             $ref: '#/definitions/models.APIResponseData'
         "403":
           description: body is empty
+  /invite/validate:
+    post:
+      tags:
+      - invite
+      description: validates a user invitation link to see if it was actually created
+        by user.
+      operationId: InvitationController.Verify Invitation Link
+      parameters:
+      - in: body
+        name: body
+        description: A json containing the role {int}, email {string} and code {string}
+        required: true
+        schema:
+          $ref: '#/definitions/models.Invitation'
+      responses:
+        "200":
+          description: '{string} "Invitation Url"'
   /owner/exist:
     get:
       tags:
@@ -317,6 +334,17 @@ definitions:
         format: int64
       token:
         type: string
+  models.Invitation:
+    title: Invitation
+    type: object
+    properties:
+      code:
+        type: string
+      email:
+        type: string
+      role:
+        type: integer
+        format: int64
   models.Invite:
     title: Invite
     type: object
@@ -406,7 +434,10 @@ tags:
     AdminController handles admin controller
 - name: token
   description: |
-    TokenController handles every other system related sub-service
+    TokenController handles every endpoint relating to token
 - name: owner
   description: |
     OwnerController handles all operations about App Owner
+- name: invite
+  description: |
+    InvitationController handles every the endpoint relating to inviting users
